added the javascript to the html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <img src="#">
+  <script>
+    const img = document.querySelector('img');
+    fetch('https://api.giphy.com/v1/gifs/translate?api_key=pzb57nxBZlnj5HMb6GY1fv3YHYFtJa7K&s=cats', {mode: 'cors'})
+    .then(function(response) {
+      console.log(response.json());
+    });
+  </script>
 </body>
 </html>
