--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <script>
     const img = document.querySelector('img');
     fetch('https://api.giphy.com/v1/gifs/translate?api_key=pzb57nxBZlnj5HMb6GY1fv3YHYFtJa7K&s=cats', {mode: 'cors'})
-    .then(function(response) {
-      console.log(response.json());
-    });
+      .then(function(response) {
+      return response.json();
+      })
+      .then(function(response) {
+        img.src = response.data.images.original.url;
+      });
   </script>
 </body>
 </html>
