--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 <body>
   <img src="#">
   <script>
-    const img = document.querySelector('img');
-    fetch('https://api.giphy.com/v1/gifs/translate?api_key=pzb57nxBZlnj5HMb6GY1fv3YHYFtJa7K&s=cats', {mode: 'cors'})
-      .then(function(response) {
-      return response.json();
-      })
-      .then(function(response) {
-        img.src = response.data.images.original.url;
-      });
+    function generateImage()  {
+      const img = document.querySelector('img');
+      fetch('https://api.giphy.com/v1/gifs/translate?api_key=pzb57nxBZlnj5HMb6GY1fv3YHYFtJa7K&s=cats', {mode: 'cors'})
+        .then(function(response) {
+        return response.json();
+        })
+        .then(function(response) {
+          img.src = response.data.images.original.url;
+        });
+      }
+    window.addEventListener('click', generateImage);
+    generateImage();
   </script>
 </body>
 </html>
