--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <img src="#">
+  <button id="refresh">refresh
+  </button>
   <script>
-    function generateImage()  {
-      const img = document.querySelector('img');
-      fetch('https://api.giphy.com/v1/gifs/translate?api_key=pzb57nxBZlnj5HMb6GY1fv3YHYFtJa7K&s=cats', {mode: 'cors'})
-        .then(function(response) {
-        return response.json();
-        })
-        .then(function(response) {
-          img.src = response.data.images.original.url;
-        });
-      }
-    window.addEventListener('click', generateImage);
-    generateImage();
+    let item = 'cat';
+    const img = document.querySelector('img');
+    async function getCats() {
+      const response = await fetch(`https://api.giphy.com/v1/gifs/translate?api_key=pzb57nxBZlnj5HMb6GY1fv3YHYFtJa7K&s=${item}`, {mode: 'cors'});
+      const catData = await response.json();
+      img.src = catData.data.images.original.url;       
+    }
+    getCats();  
+    const refreshBtn = document.getElementById('refresh');
+    refreshBtn.addEventListener('click', getCats);
   </script>
 </body>
 </html>
