--- a/index.html
+++ b/index.html
@@ -4,14 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Giff generator</title>
 </head>
 <body>
-  <img src="#">
-  <button id="refresh">refresh
-  </button>
+  <div class="page">
+    <img src="#">
+    <form>
+      <label for="search">Seach for gif</label>
+      <input type="text" id="search">
+      <button type="submit" id="submitButton">Submit</button>
+    </form>
+    <button id="refresh">refresh
+    </button>
+  </div>
+
+
   <script>
     let item = 'cat';
+    const searchItem = document.getElementById('search');
+
+    function onSubmit(e) {
+      e.preventDefault();
+      const searchItem = document.getElementById('search').value;
+      item = searchItem;
+      getCats();
+    }
+
+    const submitBtn = document.getElementById('submitButton');
+    submitBtn.addEventListener('click', onSubmit);
+
     const img = document.querySelector('img');
     async function getCats() {
       const response = await fetch(`https://api.giphy.com/v1/gifs/translate?api_key=pzb57nxBZlnj5HMb6GY1fv3YHYFtJa7K&s=${item}`, {mode: 'cors'});
