had to add the current year to the footer

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
 
   <script>
+
+    document.getElementById("currentYear").innerHTML = new Date().getFullYear();
     let item = 'cat';
-    const searchItem = document.getElementById('search');
 
     function onSubmit(e) {
       e.preventDefault();
